# mlops-course-practice

./: .gitignore  Dockerfile  README.md  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: cont_training.yml  unit_tests.yml
models/: model.pkl.dvc
src/: data_builder.py  execution.py  process.py  trainer.py  utils.py
src/api/: main.py
src/api/app/: api_utils.py  models.py  views.py
tests/: api_tests.py
