[tool.poetry]
name = "mlops-course-practice"
version = "0.1.0"
description = "MLops course practice"
authors = ["Miguel Arquez"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
pandas = "^1.3.4"
scikit-learn = "^1.0.1"
dvc = {extras = ["gs"], version = "^2.9.2"}

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
