[tool.poetry]
name = "mlops-course-practice"
version = "0.1.0"
description = "MLops course practice"
authors = ["Miguel Arquez"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
pandas = "^1.3.4"
scikit-learn = "^1.0.1"
dvc = {extras = ["gs"], version = "^2.9.2"}
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.5"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
